Update And Create Parvande

--- a/Legal.Presentation/Views/Shared/_Layout.cshtml
+++ b/Legal.Presentation/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <div class="navbar navbar-fixed-top" id="main-navbar">
         <div class="header-right">
             <a href="/" class="logo-con">
-                <img src="/Images/logo3.png" class="img-responsive center-block" alt="لوگو آرایشگاه بیک ">
+                <img src="/Images/logo3.png" class="img-responsive center-block" alt="لوگو سازمان ">
             </a>
         </div><!-- /.header-right -->
         <div class="header-left">
@@ -80,7 +80,12 @@
                                     <span>لیست کاربران</span>
                                 </a>
                             </li>
-                         
+                            <li>
+                                <a asp-controller="Parvandeh" asp-action="Index" class="">
+                                    <i class="icon-note"></i>
+                                    <span>لیست پرونده ها</span>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                  
