--- a/Legal.Presentation/Views/_ViewImports.cshtml
+++ b/Legal.Presentation/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Legal.Presentation.Models
 @using Legal.Application.DTOs.Users
 @using Legal.Application.DTOs.Common
+@using Legal.Application.DTOs.Parvandeh
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
